--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,47 @@
-Django==3.2.16
-psycopg2-binary==2.9.5
+aioredis==1.3.1
+asgiref==3.8.1
+async-timeout==5.0.1
+attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
+black==24.10.0
+cffi==1.17.1
+cfgv==3.4.0
 channels==3.0.5
 channels-redis==3.3.1
-pytest
+click==8.1.7
+constantly==23.10.4
+cryptography==43.0.3
+daphne==3.0.2
+distlib==0.3.9
+Django==3.2.16
+filelock==3.16.1
+hiredis==3.0.0
+hyperlink==21.0.0
+identify==2.6.2
+idna==3.10
+incremental==24.7.2
+iniconfig==2.0.0
+msgpack==1.1.0
+mypy-extensions==1.0.0
+nodeenv==1.9.1
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.6
+pluggy==1.5.0
+pre_commit==4.0.1
+psycopg2-binary==2.9.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pyOpenSSL==24.2.1
+pytest==8.3.3
+pytz==2024.2
+PyYAML==6.0.2
+service-identity==24.2.0
+sqlparse==0.5.2
+Twisted==24.10.0
+txaio==23.1.1
+typing_extensions==4.12.2
+virtualenv==20.27.1
+zope.interface==7.1.1
